<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
  <item
      android:id="@+id/capture1"
      android:orderInCategory="100"
      android:title="capture 1"
      app:showAsAction="never"/>
  <item
      android:id="@+id/capture2"
      android:orderInCategory="100"
      android:title="capture 2"
      app:showAsAction="never"/>
  <item
      android:id="@+id/capture3"
      android:orderInCategory="100"
      android:title="capture 3"
      app:showAsAction="never"/>
  <item
      android:id="@+id/capture4"
      android:orderInCategory="100"
      android:title="capture 4"
      app:showAsAction="never"/>
  <item
      android:id="@+id/capture5"
      android:orderInCategory="100"
      android:title="capture 5"
      app:showAsAction="never"/>

</menu>
