<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="120dp"
      android:background="#0000ff"
      android:gravity="center">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BLUE"
    />
  </LinearLayout>

  <TextureView
      android:id="@+id/textureView"
      android:layout_marginTop="60dp"
      android:layout_width="match_parent"
      android:layout_height="match_parent"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="120dp"
      android:layout_margin="40dp"
      android:background="#ff0000"
      android:layout_gravity="center"
      android:gravity="center">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_camera"/>
    />

  </LinearLayout>

</FrameLayout>
